<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_internet"
        android:title="@string/action_search_internet"
        app:showAsAction="never"/>

    <item
        android:id="@+id/scan_barcode"
        android:title="@string/scan_barcode"
        app:showAsAction="ifRoom"
        android:icon="@drawable/scan_icon"/>
    <item
        android:id="@+id/all_books"
        android:title="@string/all_books"
        app:showAsAction="never"/>
    <item
        android:id="@+id/local_search"
        android:title="@string/search_locally"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/create_shelf"
        android:title="@string/create_shelf"
        app:showAsAction="never"/>
    <item
        android:id="@+id/all_shelves"
        android:title="@string/all_shelves"
        app:showAsAction="never"/>

</menu>