<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content" android:background="@color/backgroundColor">
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/book_title_cont_desc"
        android:id="@+id/search_result_title"
       
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_id"
        android:visibility="gone"
        />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/search_result_thumbnail"
        android:contentDescription="@string/book_cover_content_description"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/small_thumbnail"
        android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/thumbnail_url"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/author_field"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_result_author"
        android:background="@drawable/rounded_edittext"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/author_cont_desc"
        android:padding="10dp"
         />




    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/google_books_ratings"/>

    <RatingBar
        android:id="@+id/search_result_avg_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:theme="@style/RatingBar"
        android:contentDescription="@string/rating_bar_cont_desc"
        android:text="0.0" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/publisher"/>

    <EditText
        android:id="@+id/search_result_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:contentDescription="@string/publisher_cont_desc"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/date_of_publish"/>

    <EditText
        android:id="@+id/search_result_published_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_edittext"
        android:contentDescription="@string/date_of_publish_entry_cont_desc"
        android:padding="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/isbn"/>

    <EditText
        android:id="@+id/search_result_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_edittext"
        android:contentDescription="@string/isbn_entry_cont_desc"
        android:padding="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/genera"/>

    <EditText
        android:id="@+id/search_result_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_edittext"
        android:contentDescription="@string/genera_entry_cont_desc"
        android:padding="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/total_pages"/>

    <EditText
        android:id="@+id/search_result_page_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_edittext"
        android:contentDescription="@string/tot_pages_entry_cont_desc"
        android:padding="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/desc"/>

    <EditText
        android:id="@+id/search_result_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_edittext"
        android:contentDescription="@string/desc_entry_cont_desc"
        android:layout_margin="10dp"
        android:padding="10dp" />



</LinearLayout>
</ScrollView>
