<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_question"
        android:id="@+id/readQuestion"
        android:layout_marginTop="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:textSize="24sp"
        />

    <RadioGroup
        android:id="@+id/radioRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp">

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"
            android:text="@string/yes"
             />

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/no"
            android:checked="true"/>

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_borrower_label"
        android:id="@+id/loaned_to"
        android:textColor="@color/black"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:textSize="24sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loan_field"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:textSize="24sp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/name_of_borrower"
        />
</LinearLayout>