<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context="com.jawadjahangir.android.bookwatch.SearchInternetActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/search_google_book_toolbar"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_search"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="82dp"
        android:layout_below="@+id/toolbar"
        android:hint="@string/title_field" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_author"
        android:layout_below="@+id/title_search"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="44dp"
        android:hint="@string/author_field" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_isbn"
        android:layout_below="@+id/search_author"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="44dp"
        android:inputType="number"
        android:hint="@string/isbn" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/search_button_text"
        android:contentDescription="@string/search_button_text"
        android:id="@+id/search_button"
        android:layout_below="@+id/search_isbn"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="56dp"
        android:onClick="searchBook"
        android:textSize="30sp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        style="?android:attr/progressBarStyle"
        android:progressDrawable="@drawable/circular_progress_bar"/>
</RelativeLayout>
