<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="36sp"
                android:contentDescription="@string/title_field"
                android:id="@+id/search_result_title"
                android:textColor="@color/black"
                android:text="title"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/book_id"
                android:visibility="gone"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/search_result_thumbnail"
                android:contentDescription="@string/book_cover_content_description"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/author_field"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_result_author"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:contentDescription="@string/author_field"
                android:text="authors" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/google_books_ratings"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"/>

            <RatingBar
                android:id="@+id/local_search_result_avg_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="?android:attr/ratingBarStyleIndicator"
                android:contentDescription="@string/rating_bar_cont_desc"
                android:text="0.0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/total_pages"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/search_result_page_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:contentDescription="@string/total_pages"
                android:text="page count"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/publisher"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/search_result_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:contentDescription="@string/publisher"
                android:text="publisher" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/date_of_publish"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/search_result_published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:contentDescription="@string/date_of_publish"
                android:text="publishing date"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/isbn"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/search_result_isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:contentDescription="@string/isbn"
                android:text="isbn"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/genera"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/search_result_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:contentDescription="@string/genera"
                android:text="Genera"/>





            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_result_description"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>
